Changelog for version 4.8-git:

* Disabled multiple city mode for now. It's buggy and not supported.
* Added displaying squads' id and number of members in squad review.
* Last found person in recruit menu is approached automatically now. You still
might cancel meeting by pressing "C" in talk option. It has been done to support
holding "B" key to seduce everyone.
* Added unique id display for squads in Review mode for easier distinguishing
them from each other.
* When toggling through squads with TAB in main window, it will also swap to
list view as well, instead keep zooming X member.
* Changed recruit action mechanics to automatically start conversation
when only 1 recruit found is left
* Reordered display of attributes to be more logically grouped.
* Added displaying recruit counter during meetings next to the name of recruiter
and lovers counter display next to the name of seducer.
* Added coloring names of your members according to their juice level for
easier distinguishing them. It's not everywhere, just where it might count.
* Moved the repository from svn to git and cleaned up the history from binary
blobs while at it (reduced size from 300MB to 7.5MB)


2013-04-24   Jonathan Stickles   <jonathansfox@users.sourceforge.net>
4.07.0 Changelog

* Split knives into Combat Knife, Dagger, and Shank, removing the old generic Knife
* Added the ability to hit up to three times when attacking with a knife (though it takes a great deal of skill to do consistently)
* Added Sneak Attacks
* Added Black Leather Armor in the Oubliette
* Made stealthy armor show up black (instead of green/red) when in a situation where you might sneak
* Made it possible for formerly healthy Liberals to die in labor camp
* Updated site maps and incorporated some of KA101's new maps
* Increased shotgun capacity to 8 shells from 6
* Increased accuracy and minimum damage of shotguns
* Removed the +50% damage "critical" chance from shotguns
* Added AA-12 Auto-Shotgun, which fires twice